Fix layout issue on small screen devices

--- a/src/assets/styles/components/layout/_footer.scss
+++ b/src/assets/styles/components/layout/_footer.scss
@@ -5,6 +5,7 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
+  flex-shrink: 0;
   justify-content: flex-end;
   padding: $base-padding;
 }
