--- a/src/assets/styles/components/layout/_header.scss
+++ b/src/assets/styles/components/layout/_header.scss
@@ -4,4 +4,5 @@
   display: flex;
   justify-content: space-between;
   padding: $base-padding;
+  flex-shrink: 0;
 }
